Realigned Login and Dashboard pages

--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -98,8 +98,10 @@ select, option {
 }
 
 label {
+	display: block;
+	margin: .2em 0 0 0;
 	font-size: 1.3em;
-	line-height: 1.75;
+	line-height: 1.4;
 	font-weight: bold;
 }
 
@@ -386,8 +388,8 @@ label {
 	margin: 0;
 }
 
-.story-details input {
-	width: 70%;
+.story-details input, .story-details select {
+	width: 30%;
 }
 
 .drag-button {
@@ -429,8 +431,10 @@ label {
 }
 
 span.label {
+	display: block;
+	margin: .2em 0 0 0;
 	font-size: 1.3em;
-	line-height: 1.75;
+	line-height: 1.4;
 	font-weight: bold;
 }
 
@@ -455,6 +459,7 @@ p.tooltip {
 
 p.submit {
 	margin-bottom: 0;
+	line-height: 1.4;
 }
 
 p.submit a {
@@ -640,4 +645,8 @@ h4.large, a.large {
 
 .hide {
 	display: none;
+}
+
+.no-border {
+	border: 0;
 }
