--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -241,15 +241,14 @@
 	</div>
 </div>
 	
-	<div id="footer-wrapper" style="display: none">
+	<div id="footer-wrapper">
 		<div id="footer">
 			<div class="section">
 				<h3>About</h3>
 				
 				<ul>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Contact</a></li>
-					<li><a href="">Privacy Policy</a></li>
+					<li><p><a href="">Blog</a></p></li>
+					<li><p><a href="">Contact</a></p></li>
 				</ul>
 			</div>
 			
@@ -257,10 +256,13 @@
 				<h3>Help</h3>
 				
 				<ul>
-					<li><a href="">FAQ</a></li>
-					<li><a href="">Support</a></li>
+					<li><p><a href="">FAQ</a></p></li>
+					<li><p><a href="">Support</a></p></li>
 				</ul>
 			</div>
+			
+			<p class="copyright">Copyright © 2009, ourappname. All rights reserved.</p>
+			<p class="copyright"><a href="">Privacy Policy</a>. <a href="">Terms and Conditions</a>.</p>
 		</div>
 	</div>
 
