--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 
 <div id="session">
 	<ul>
-		<li class="account"><a href="" class="ok">&laquo; upgrade your account</a></li>
+		<li><a href="" class="ok">&laquo; upgrade your account</a></li>
 		<li><a href="">rodrigogalindez</a></li>
 		<li><a href="">people</a></li>
 		<li><a href="">project settings</a></li>
@@ -20,7 +20,7 @@
 	</ul>
 </div>
 
-<div id="wrapper">
+<div id="wrapper" class="span-12">
 	<h1><span class="editable" title="Click to edit">Polaris</span></h1>
 	
 	<div id="nav">
@@ -33,38 +33,35 @@
 	
 	<div id="inner-wrapper">
 		<div id="content-wrapper">
-			<div id="left-content">
+			<div class="col span-8">
 				<form action="forms_submit" method="get" accept-charset="utf-8">
-					<table class="common login">
-						<tr>
-							<th style="width: 10%">
-								<label for="username">Username</label>
-							</th>
-							<td style="width: 50%">
-								<input type="text" name="username" value="" id="username" />
-							</td>
-							<td />
-						</tr>
-						<tr>
-							<th>
-								<label for="password">Password</label>
-							</th>
-							<td>
-								<input type="password" name="password" value="" id="password" />
-							</td>
-							<td><p><a href="">Forgot password?</a></p></td>
-						</tr>
-						<tr>
-							<th />
-							<td colspan="2">
-								<p class="submit"><input type="submit" name="some_name" value="Login" id="some_name" class="submit" /> or <a href="">sign up for a free account</a></p>
-							</td>
-						</tr>
-					</table>
+					<div class="field no-border">
+						<div class="col span-1">
+							<label for="username">Username</label>
+						</div>
+						<div class="col last span-3">
+							<input type="text" name="username" value="" id="username" />
+						</div>
+					</div>
+					
+					<div class="field no-border">
+						<div class="col span-1">
+							<label for="password">Password</label>
+						</div>
+						<div class="col last span-3">
+							<input type="password" name="password" value="" id="password" /> <p class="tooltip"><a href="">Forgot password?</a></p>
+						</div>
+					</div>
+					
+					<div class="field">
+						<div class="col last span-4 nudge-1">
+							<p class="submit"><input type="submit" name="some_name" value="Login" id="some_name" class="submit" /> or <a href="">sign up for a free account</a></p>
+						</div>
+					</div>
 				</form>
 			</div>
 			
-			<div id="sidebar">
+			<div class="col last span-4">
 				<div class="section">
 					<h3>What's new?</h3>
 					
@@ -81,15 +78,14 @@
 	</div>
 </div>
 	
-	<div id="footer-wrapper" style="display: none">
+	<div id="footer-wrapper">
 		<div id="footer">
 			<div class="section">
 				<h3>About</h3>
 				
 				<ul>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Contact</a></li>
-					<li><a href="">Privacy Policy</a></li>
+					<li><p><a href="">Blog</a></p></li>
+					<li><p><a href="">Contact</a></p></li>
 				</ul>
 			</div>
 			
@@ -97,10 +93,13 @@
 				<h3>Help</h3>
 				
 				<ul>
-					<li><a href="">FAQ</a></li>
-					<li><a href="">Support</a></li>
+					<li><p><a href="">FAQ</a></p></li>
+					<li><p><a href="">Support</a></p></li>
 				</ul>
 			</div>
+			
+			<p class="copyright">Copyright © 2009, ourappname. All rights reserved.</p>
+			<p class="copyright"><a href="">Privacy Policy</a>. <a href="">Terms and Conditions</a>.</p>
 		</div>
 	</div>
 
