Minor tweaks on templates

--- a/templates/sprint-settings.html
+++ b/templates/sprint-settings.html
@@ -33,31 +33,12 @@
 	
 	<div id="inner-wrapper">
 		<div id="page-header">
-			<div class="col span-5">
-				<h2>Stories</h2>
-
-				<ul>
-					<li><a href="">Add new story</a></li>
-					<li><a href="">Browse by tags</a></li>
-				</ul>
-			</div>
+			<h2>Sprint settings</h2>
 			
-			<div class="col last span-7">
-			<div class="new-story">
-				<form action="ui_submit" method="get" accept-charset="utf-8">
-					<div class="field no-padding">
-						<div class="col span-5">
-							<input type="text" name="some_name" value="" id="some_name" />
-							<p class="tooltip">Example: "Redesign login form @lebowsky #inteface #design". <a href="">More help</a>.</p>
-						</div>
-				
-						<div class="col last span-2">
-							<input type="submit" name="some_name" value="Add story" id="some_name" class="submit" />
-						</div>
-					</div>
-				</form>
-			</div>
-			</div>
+			<ul>
+				<li><a href="">Add new story</a></li>
+				<li><a href="">Browse by tags</a></li>
+			</ul>
 		</div>
 		
 		<div id="content-wrapper">
