--- a/templates/ui.html
+++ b/templates/ui.html
@@ -12,11 +12,11 @@
 
 <div id="session">
 	<ul>
-		<li><a href="" class="ok">&laquo; upgrade your account</a></li>
-		<li><a href="">logout</a></li>
-		<li><a href="">project settings</a></li>
-		<li><a href="">people</a></li>		
-		<li><a href="">rodrigogalindez</a></li>
+		<li><a href="upgrade.html" class="ok">&laquo; upgrade your account</a></li>
+		<li><a href="profile.html">rodrigogalindez</a></li>
+		<li><a href="people.html">people</a></li>
+		<li><a href="project-settings.html">project settings</a></li>
+		<li><a href="logout.html">logout</a></li>
 	</ul>
 </div>
 
