--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -516,6 +516,15 @@ dl.person dt {
 	float: left;
 }
 
+dl.person dt img {
+	padding: 5px;
+	background: #fff;
+	border-top: 1px solid #F0F0F0;
+	border-left: 1px solid #F0F0F0;
+	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+}
+
 dl.person dd {
 	width: 13em;
 	margin-left: 2.4em;
