--- a/templates/setup-2.html
+++ b/templates/setup-2.html
@@ -16,30 +16,12 @@
 	<div id="inner-wrapper">
 		<div id="content-wrapper">
 			<div id="setup-wrapper">
-				<h2><strong>1</strong> ● <small>2</small> ● <small>3</small></h2>
-				<h3>Configure your account</h3>
+				<h2><small>1</small> ● <strong>2</strong> ● <small>3</small></h2>
+				<h3>Setup your <acronym title="Subversion">SVN</acronym> repository</h3>
 				
-				<p>Configure your unique URL here. You'll need it to login your account.</p>
-								
-				<form action="setup-1_submit" method="get" accept-charset="utf-8">
-					<table>
-						<tr>
-							<th style="width: 70%">
-								<input type="text" name="some_name" value="" id="some_name" />
-								<p class="tooltip"><em>racionais</em> is available!</p>
-							</th>
-							<td>
-								<span>.appname.com</span>
-							</td>
-						</tr>
-						<tr>
-							<th />
-							<td>
-								<input type="submit" name="some_name" value="Continue" id="some_name" class="submit" />
-							</td>
-						</tr>
-					</table>
-				</form>
+				<p>Here's your URL to get access to your SVN repository. <a href="">Recommended software for Mac &amp; PC</a>.</p>
+				<p><code>username.subversion.com</code><br /><code>user:pass</code></p>
+				<input type="submit" name="some_name" value="Continue" id="some_name" class="submit" />
 			</div>
 		</div>
 	</div>
