--- a/templates/setup-3.html
+++ b/templates/setup-3.html
@@ -16,26 +16,19 @@
 	<div id="inner-wrapper">
 		<div id="content-wrapper">
 			<div id="setup-wrapper">
-				<h2><strong>1</strong> ● <small>2</small> ● <small>3</small></h2>
-				<h3>Configure your account</h3>
+				<h2><small>1</small> ● <small>2</small> ● <strong>3</strong></h2>
+				<h3>Add your first story</h3>
 				
-				<p>Configure your unique URL here. You'll need it to login your account.</p>
-								
+				<p>To get started, let's add your first story. For example, "Redesign login form @lebowsky #interface". Use @ to link this story to a person, and # to tag it. Don't worry about people and tags, they will be interpreted and added automagically.</p>
+				
 				<form action="setup-1_submit" method="get" accept-charset="utf-8">
 					<table>
 						<tr>
 							<th style="width: 70%">
 								<input type="text" name="some_name" value="" id="some_name" />
-								<p class="tooltip"><em>racionais</em> is available!</p>
 							</th>
 							<td>
-								<span>.appname.com</span>
-							</td>
-						</tr>
-						<tr>
-							<th />
-							<td>
-								<input type="submit" name="some_name" value="Continue" id="some_name" class="submit" />
+								<input type="submit" name="some_name" value="Add story &amp; Finish" id="some_name" class="submit" />
 							</td>
 						</tr>
 					</table>
