--- a/templates/setup-1.html
+++ b/templates/setup-1.html
@@ -35,7 +35,7 @@
 						<tr>
 							<th />
 							<td>
-								<input type="submit" name="some_name" value="Continue" id="some_name" class="submit" />
+								<a href="setup-2.html" class="button">Continue &raquo;</a>
 							</td>
 						</tr>
 					</table>
