--- a/templates/setup-2.html
+++ b/templates/setup-2.html
@@ -21,7 +21,7 @@
 				
 				<p>Here's your URL to get access to your SVN repository. <a href="">Recommended software for Mac &amp; PC</a>.</p>
 				<p><code>username.subversion.com</code><br /><code>user:pass</code></p>
-				<input type="submit" name="some_name" value="Continue" id="some_name" class="submit" />
+				<a href="setup-3.html" class="button">Continue &raquo;</a>
 			</div>
 		</div>
 	</div>
