--- a/templates/setup-3.html
+++ b/templates/setup-3.html
@@ -28,7 +28,7 @@
 								<input type="text" name="some_name" value="" id="some_name" />
 							</th>
 							<td>
-								<a href="stories.html" class="button">Add story &amp; finish</a>
+								<a href="dashboard.html" class="button">Add story &amp; finish</a>
 								<!-- <input type="submit" name="some_name" value="Add story &amp; Finish" id="some_name" class="submit" /> -->
 							</td>
 						</tr>
