--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -20,7 +20,6 @@
 body {
 	font-family: Helvetica, Arial, Verdana, sans-serif;
 	font-size: 62.5%;
-/*	background: transparent url(../images/grid-1080.gif) repeat-y top center;*/
 /*	background: transparent url(../images/grid-960.gif) repeat-y top center;*/
 	background-color: #fff;
 	color: #333;
@@ -85,7 +84,7 @@ li p {
 }
 
 input, textarea, select, option {
-	width: 97%;
+/*	width: 97%;*/
 	padding: 2px;
 	margin: 0 0 .5em 0;
 	font-family: Monaco, "Courier New", fixed;
@@ -156,11 +155,9 @@ label {
 
 #nav {
 	margin: 0 0 3em 0;
-/*	background: #F0F0F0;*/
-	border: 1px solid #E0E0E0;
+	border-bottom: 3px solid #E0E0E0;
 	clear: both;
 	overflow: hidden;
-	-moz-border-radius: 10px;
 }
 
 #nav ul {
@@ -170,18 +167,20 @@ label {
 
 #nav li {
 	margin: 0;
-	font-size: 1.4em;
+	font-size: 1.8em;
 	line-height: 1.3;
-	border-right: 1px solid #fff;
 	float: left;
 }
 
 #nav li a {
 	display: block;
-	padding: .7em 1em;
-	border-right: 1px solid #E0E0E0;
+	padding: .3em 2em;
 	color: #2C7FA2;
 	text-decoration: none;
+}
+
+#nav li a:first-child {
+	padding-left: 0;
 }
 
 #nav li a:hover {
@@ -504,6 +503,68 @@ input.submit {
 	text-decoration: underline;
 }
 
+dl.message {
+	padding: 2em 0 0 0;
+	border-bottom: 1px solid #ddd;
+	clear: both;
+	overflow: hidden;
+}
+
+dl.message img {
+	padding: 4px;
+	background: #f6f6f6;
+	border: 1px solid #eee;
+}
+
+dl.message:first-child {
+	padding: 0;
+}
+
+dl.message dt {
+	width: 5.8em;
+	margin-right: 2.4em;
+	text-align: right;
+	float: left;
+}
+
+dl.message dt strong {
+	font-size: 2em;
+}
+
+dl.message dd {
+	width: 8em;
+	margin-right: 2.4em;
+	float: left;
+}
+
+dl.message dd + dd {
+	width: 44em;
+	margin-right: 0;
+}
+
+dl.message dd + dd + dd {
+	width: 44em;
+	margin-left: 18.6em;
+	margin-right: 0;
+	padding: 1em;
+	border-top: 1px solid #ddd;
+}
+
+dl.message dd + dd + dd ul {
+	margin: 0;
+	list-style-type: none;
+}
+
+dl.message dd + dd + dd li {
+	margin-right: 2.4em;
+	float: left;
+}
+
+dl.message dd + dd + dd li a {
+	font-size: 1.3em;
+	line-height: 1.75;
+}
+
 dl.person {
 	padding: 1em;
 	border-bottom: 1px solid #ddd;
@@ -746,4 +807,20 @@ h4.large, a.large {
 
 .align-right {
 	text-align: right !important;
+}
+
+table.add-story {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+table.add-story td {
+	width: 75%;
+}
+
+table.add-story td + td {
+}
+
+table.add-story input {
+	width: 93%;
 }
