--- a/templates/css/master.css
+++ b/templates/css/master.css
@@ -307,16 +307,16 @@ label {
 	text-align: center;
 }
 
-.story-meta li.priority {
+.story-meta li.number {
 	font-size: 2.4em;
 	line-height: 1.3;
 }
 
-.story-meta li.priority a {
+.story-meta li.number a {
 	color: #333;
 }
 
-.story-meta li.priority a:hover {
+.story-meta li.number a:hover {
 	color: #2C7FA2;
 }
 
@@ -511,6 +511,7 @@ dl.message {
 }
 
 dl.message img {
+	width: 54px;
 	padding: 4px;
 	background: #f6f6f6;
 	border: 1px solid #eee;
