Added browse by person template

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -53,7 +53,7 @@
 					<h3>Stories by person</h3>
 					
 					<div class="tags">
-						<p><a href="" class="small">rodrigogalindez</a> <a href="" class="large">pablius</a> <a href="" class="x-small">gonzalocasas</a> <a href="" class="medium">melocotoncita</a> <a href="" class="large">lebowski</a></p>
+						<p><a href="browse-by-person.html" class="small">rodrigogalindez</a> <a href="browse-by-person.html" class="large">pablius</a> <a href="browse-by-person.html" class="x-small">gonzalocasas</a> <a href="browse-by-person.html" class="medium">melocotoncita</a> <a href="browse-by-person.html" class="large">lebowski</a></p>
 					</div>
 				</div>
 			</div>
