--- a/templates/single-story.html
+++ b/templates/single-story.html
@@ -35,220 +35,31 @@
 	<div id="inner-wrapper">
 		<div id="page-header">
 			<div class="col span-8">
-				<h2>Sprint 1: <span class="editable">Set a goal for this sprint</span></h2>
+				<h2>Add 'remember me' checkbox in login page</h2>
 			
 				<ul>
-					<li><a href="">Finish this sprint</a></li>
+					<li>by <a href="">pablius</a>, 2 minutes ago</li>
 				</ul>
 			</div>
 			
 			<div class="col last span-4">
-				<table class="add-story">
-					<tr>
-						<td>
-							<input type="text" name="some_name" value="" id="some_name" />
-						</td>
-						<td>
-							<input type="submit" name="some_name" value="Add story" id="some_name" class="submit" />
-						</td>
-					</tr>
-					<tr>
-						<td colspan="2"><p><small>Use: "New sign up @pablius #interface". <a href="">More help</a>.</small></p></td>
-					</tr>
-				</table>
+				<ul>
+					<li><a href="">Pertinent info goes here</a></li>
+					<li><a href="">Pertinent info goes here</a></li>
+				</ul>
 			</div>
 		</div>
 		
 		<div id="content-wrapper">
-			<div class="col span-6">
-				<div class="module">
-					<div class="module-header">
-						<h3>In Progress<br /><small>This Sprint</small>
-						</h3>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta">
-							<ul>
-								<li class="number"><a href="single-story.html">117</a></li>
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-					<div class="story">
-						<div class="story-meta">
-							<ul>
-								<li class="number"><a href="">324</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="small"><span class="editable" title="Click to edit">Re-build error messages</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta">
-							<ul>
-								<li class="number"><a href="">143</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="x-small"><span class="editable" title="Click to edit">Re-build error messages</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta">
-							<ul>
-								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="large"><span class="editable" title="Click to edit">Re-build error messages</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div id="files-wrapper">
+				<ul>
+					<li><a href="">docs/features.txt</a></li>
+					<li><a href="">docs/killer-features.txt</a></li>
+				</ul>
 			</div>
 			
-			<div class="col span-3">
-				<div class="module">
-					<div class="module-header">
-						<h3>To-do<br /><small>Product Backlog</small></h3>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta col last span-1">
-							<ul>
-								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="large"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta col last span-1">
-							<ul>
-								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="medium"><span class="editable" title="Click to edit">Login page needs remember me box</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta col last span-1">
-							<ul>
-								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="x-small"><span class="editable" title="Click to edit">A quick story</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'interface'">#interface</a> <a href="" title="View stories tagged as 'design'">#design</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-			<div class="col last span-3">
-				<div class="module">
-					<div class="module-header">
-						<h3>Unplanned <br /><br /></h3>
-					</div>
-					
-					<div class="story">
-						<div class="story-meta col last span-1">
-							<ul>
-								<li class="number"><a href="">3</a></li>
-								<!-- <li><a href="">Accept</a></li> -->
-							</ul>
-						</div>
-						
-						<div class="story-description">
-							<div class="story-title">
-								<h4 class="small"><span class="editable" title="Click to edit">Redesign cookies</span></h4>
-							</div>
-							
-							<div class="story-details">
-								<ul>
-									<li><p><a href="" title="View stories for @gonzalocasas">@gonzalocasas</a> <a href="" title="View stories tagged as 'layout'">#layout</a> <a href="" class="quick-edit" title="Click to edit persons and tags for this story">quick edit</a></p></li>
-								</ul>
-							</div>
-						</div>
-					</div>
+			<div class="file">
+				<div class="file-title">
 				</div>
 			</div>
 		</div>
